# auto_test

./: ai_demo.py  example_usage.py  lianxi.py  transaction_review.py  运行说明.md
autotest/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  新手读我.md  运行说明.md
autotest/allure-results/: 0070af5f-bdac-4f3e-928c-7fd74d0752c7-container.json  008eee44-b7a9-4785-b937-8b1870c05501-container.json  0f5d47df-578d-4821-8c01-b1cbee07e47d-container.json  0fcb73b2-7610-49d8-a8a2-9cce2f314739-result.json  1400c8b5-7f00-421f-abe4-4e451fc752f8-container.json  24687d06-3f3f-436b-a874-39f60ae3e69e-container.json  2f7a88a4-f48f-427c-b1d2-3d2678d10ca7-container.json  360d8eef-96f7-4c95-adb5-7423caa034ae-container.json  3c360461-2d31-4c9e-8954-9e9e12ac57cb-container.json  3cdcab8d-a904-438a-a5fc-8b08c98710a3-result.json  41224161-819e-4ebc-b081-68b8c1766e9f-result.json  4fcc5d4a-bd9b-4816-b9d2-ef6af386889c-container.json  5756c58c-f7bc-432d-8fd2-8677b7e8cb96-result.json  6046eb5b-8ec7-43a2-9e58-c087c4c7741d-container.json  6aba746a-f222-4c16-9861-fde7bede117e-result.json  6dbb04e3-d963-49c6-a532-3db5d2e36597-result.json  7068863c-ffaa-4e8d-97bb-afc5e20384b6-container.json  83d1fda8-5bf0-435a-a051-478bbc7cd9cf-container.json  85530022-ad9d-4212-95e8-35b709131884-container.json  8ab45e49-3576-46ea-8649-b812bb62bf93-container.json  8dc2b068-a832-4c88-b04d-3a108c5743a4-container.json  8edb78ff-d472-49fb-a9a6-93b3f4f9237d-container.json  a1bf3532-d8a4-424c-84a9-ecce5a5f2e4b-container.json  b26d0859-cf3b-4929-bba2-6f4790bcca94-container.json  environment.properties  (+15 more)
(+56 files in other folders)
