 [project]
 name = "autotest-framework"
 version = "0.1.0"
 description = "Pytest + Allure automation framework (API + UI), with data-driven, keyword-driven, and Page Object support."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "pytest>=8.0.0",
   "allure-pytest>=2.13.0",
   "allure-python-commons>=2.13.0",
   "PyYAML>=6.0.1",
   "requests>=2.31.0",
   "responses>=0.25.0",
   "loguru>=0.7.2",
 ]
 
 [project.optional-dependencies]
 ui = [
   "playwright>=1.41.0",
   "pytest-playwright>=0.6.2",
 ]
 
 [tool.pytest.ini_options]
 addopts = "-q -ra --alluredir=allure-results"
 testpaths = ["tests"]
 markers = [
   "api: API tests",
   "ui: UI tests",
   "keyword: keyword-driven tests",
   "test_platform: 需本地启动 test_platform 服务的关键字联调用例",
 ]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*", "pages*"]
exclude = ["tests*", "configs*", "data*"]
namespaces = false
 
